--- a/src/assets/stylesheets/_sidebar.scss
+++ b/src/assets/stylesheets/_sidebar.scss
@@ -39,7 +39,11 @@
   }
 
   &__dropdown-arrow {
-    padding-left: 30px;
+    padding-left: $content-padding;
+
+    &:hover {
+      color: $grey-light;
+    }
   }
 }
 .sidebar-collapsed {
